force-app/main/default/objects/Rental__c/fields/Baby_Seat_Count__c.field-meta.xml
<CustomField>
    <fullName>Baby_Seat_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Baby Seat Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>