force-app/main/default/objects/Rental__c/fields/Driver_License_Country_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_Country_of_Issue__c</fullName>
    <label>Driver License Country of Issue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>