force-app/main/default/objects/Rental__c/fields/Driver_License_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Driver_License_Expiry_Date__c</fullName>
    <label>Driver License Expiry Date</label>
    <type>Date</type>
</CustomField>