force-app/main/default/objects/Rental__c/fields/Drop_Off_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Location_Code__c</fullName>
    <label>Drop Off Location Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>