force-app/main/default/objects/Rental__c/fields/Drop_Off_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Drop_Off_Location_Name__c</fullName>
    <label>Drop Off Location Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>