force-app/main/default/objects/Rental__c/fields/Fleet_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fleet Vehicle</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Rentals</relationshipLabel>
    <relationshipName>Rentals</relationshipName>
    <type>Lookup</type>
</CustomField>