force-app/main/default/objects/Rental__c/fields/Is_Business__c.field-meta.xml
<CustomField>
    <fullName>Is_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Business</label>
    <type>Checkbox</type>
</CustomField>