force-app/main/default/objects/Rental__c/fields/Is_Leisure__c.field-meta.xml
<CustomField>
    <fullName>Is_Leisure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Leisure</label>
    <type>Checkbox</type>
</CustomField>