force-app/main/default/objects/Rental__c/fields/Marketing_Optin_for_Deals_and_Offers__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Optin_for_Deals_and_Offers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Optin for Deals and Offers</label>
    <type>Checkbox</type>
</CustomField>