force-app/main/default/objects/Rental__c/fields/Motor_Club_Number__c.field-meta.xml
<CustomField>
    <fullName>Motor_Club_Number__c</fullName>
    <label>Motor Club Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>