force-app/main/default/objects/Rental__c/fields/Pick_Up_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Location_Code__c</fullName>
    <label>Pick Up Location Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>