force-app/main/default/objects/Rental__c/fields/Protection_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Protection_Coverage__c</fullName>
    <label>Protection Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Protection_Coverage</valueSetName>
    </valueSet>
</CustomField>