force-app/main/default/objects/Rental__c/fields/Total_Amount_Charged__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Charged__c</fullName>
    <label>Total Amount Charged</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>